--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,15 @@
     "postcss": "^8.4.32",
     "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "socket.io-client": "^4.7.4",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1",
+    "@types/leaflet": "^1.9.8",
+    "chart.js": "^4.4.1",
+    "react-chartjs-2": "^5.2.0",
+    "recharts": "^2.8.0",
+    "date-fns": "^3.0.6"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
