--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,30 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0",
-    "socket.io-client": "^4.7.4",
+    "next": "^15.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "typescript": "^5.6.3",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
+    "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.2",
+    "lucide-react": "^0.469.0",
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^2.5.5",
+    "socket.io-client": "^4.8.1",
     "leaflet": "^1.9.4",
     "react-leaflet": "^4.2.1",
-    "@types/leaflet": "^1.9.8",
-    "chart.js": "^4.4.1",
+    "@types/leaflet": "^1.9.14",
+    "chart.js": "^4.4.7",
     "react-chartjs-2": "^5.2.0",
-    "recharts": "^2.8.0",
-    "date-fns": "^3.0.6"
+    "recharts": "^2.13.3",
+    "date-fns": "^4.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.0"
   }
 }
